--- a/vcastplay-cms/src/app/pages/settings/users/users.component.html
+++ b/vcastplay-cms/src/app/pages/settings/users/users.component.html
@@ -1,49 +1,77 @@
-<app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+<div class="flex flex-col gap-4 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
 
-<p-card>
-    <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
-        <app-filters class="w-full md:w-[25rem]"></app-filters>
-        <div class="flex gap-4">
-            <p-button (onClick)="onClickAddNew()" label="Add New" icon="pi pi-user-plus"></p-button>
-            <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
-        </div>
-    </div>
-    <p-table class="hidden lg:block" [value]="users" [scrollable]="true">
-        <ng-template #header>
-            <tr>
-                <th pFrozenColumn>Code</th>
-                <th pFrozenColumn>Name</th>
-                <th>Email</th>
-                <th>Status</th>
-                <th alignFrozen="right" pFrozenColumn [frozen]="true">Actions</th>
-            </tr>
-        </ng-template>
-        <ng-template #body let-item>
-            <tr>
-                <td pFrozenColumn>{{ item.code }}</td>
-                <td pFrozenColumn>{{ item.firstName }} {{ item.lastName }}</td>
-                <td>{{ item.email }}</td>
-                <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
-                <td class="flex flex-row" alignFrozen="right" pFrozenColumn [frozen]="true">
-                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <div class="block lg:hidden grid grid-cols-1 gap-5">
-        @for (item of users; track $index) {
-            <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
-                <div class="flex flex-col">
-                    <h6 class="font-semibold">{{ item.firstName }} {{ item.lastName }}</h6>
-                    <p>{{ item.email }}</p>
-                </div>
-                <div class="flex flex-row">
-                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+    <div class="flex-1">
+        <p-card styleClass="h-full">
+            <div class="flex flex-col md:flex-row gap-1 md:gap-4 items-end md:items-start md:justify-between mb-8 md:mb-2">
+                <app-filters class="w-full md:w-[25rem]"></app-filters>
+                <div class="flex gap-4">
+                    <p-button (onClick)="onClickAddNew()" label="Add New" icon="pi pi-user-plus"></p-button>
+                    <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
                 </div>
             </div>
-        }
+            <p-table 
+                class="hidden lg:block" 
+                [value]="userService.loadingSignal() ? utils.tableSkeletonRows : filteredUsers()" 
+                selectionMode="single"
+                [scrollable]="true" 
+                size="small"  
+                stripedRows
+            >
+                <ng-template #header>
+                    <tr>
+                        <th>Code</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </ng-template>
+                <ng-template #body let-item>
+                    @if (userService.loadingSignal()) {
+                        <tr>
+                            <td><p-skeleton /></td>
+                            <td><p-skeleton /></td>
+                            <td><p-skeleton /></td>
+                            <td><p-skeleton /></td>
+                            <td><p-skeleton /></td>
+                        </tr>
+                    } @else {
+                        <tr>
+                            <td>{{ item.code }}</td>
+                            <td>{{ item.firstName }} {{ item.lastName }}</td>
+                            <td>{{ item.email }}</td>
+                            <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
+                            <td class="flex flex-row">
+                                <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                            </td>
+                        </tr>
+                    }
+                </ng-template>
+            </p-table>
+            <div class="block lg:hidden grid grid-cols-1 gap-5">
+                @for (item of filteredUsers(); track $index) {
+                    <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
+                        <div class="flex flex-col">
+                            <h6 class="font-semibold">{{ item.firstName }} {{ item.lastName }}</h6>
+                            <p>{{ item.email }}</p>
+                        </div>
+                        <div class="flex flex-row">
+                            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                        </div>
+                    </div>
+                } @empty {
+                    @for (item of utils.tableSkeletonRows; track $index) {
+                        <p-skeleton height="5rem" />
+                    }
+                }
+            </div>
+            <ng-template #footer>
+                <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
+            </ng-template>
+        </p-card>
     </div>
-</p-card>
+</div>
 
 <ng-template #actionBtn let-item>
     <p-button (onClick)="onClickEdit(item)" pTooltip="Edit" tooltipPosition="bottom" icon="pi pi-pencil" [text]="true" [rounded]="true" severity="success" />
@@ -116,7 +144,7 @@
         </div>
         <div class="col-span-2 md:col-span-1">
             <p-floatlabel variant="in">
-                <p-select formControlName="role" inputId="role" [options]="utils.roles" appendTo="body" optionLabel="label" optionValue="value" 
+                <p-select formControlName="role" inputId="role" [options]="roleService.roles()" appendTo="body" optionLabel="name" optionValue="id" 
                     [ngClass]="{ 'ng-invalid ng-dirty': formControl('role')?.invalid && formControl('role')?.touched }" fluid />
                 <label for="role">Roles</label>
             </p-floatlabel>
