--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,3 +1,7 @@
-<div class="flex justify-center items-center h-screen">
-    <p class="text-4xl font-bold">Hello World</p>
+<div class="flex flex-col gap-4 justify-center items-center h-screen">
+  <div class="flex flex-col gap-3 justify-center items-center">
+    <div class="font-bold text-xl md:text-4xl mb-2">Authenticate Player</div>
+    <p class="text-muted-color block mb-8">Please enter the code of the player.</p>
   </div>
+  <p-inputotp [length]="6" />
+</div>
