--- a/vcastplay-cms/src/app/pages/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/pages/auth/login/login.component.html
@@ -17,10 +17,10 @@
     </div>
     <div class="col-span-5 lg:col-span-2">
         <div class="flex flex-col items-center justify-center h-full relative bg-gray-100 p-3 md:p-10 relative">
-            <p-card class="w-full md:w-[30rem]">
-                <ng-template #title>
-                    <p class="text-2xl font-bold">Login to your account</p>
-                </ng-template>
+            <div class="flex flex-col gap-4 w-full">
+                <div class="text-center">
+                    <p class="text-3xl font-bold">Login to your account</p>
+                </div>
                 <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
                     <p-floatlabel variant="in">
                         <input id="username" pInputText formControlName="username" [fluid]="true" />
@@ -38,10 +38,8 @@
                         <a href="/" class="hover:text-orange-500">Forgot Password?</a>
                     </div>
                 </form>
-                <ng-template #footer>
-                    <p-button (onClick)="auth.onLogin()" styleClass="w-full" label="Login" />
-                </ng-template>
-            </p-card>
+                <p-button (onClick)="auth.onLogin()" styleClass="w-full" label="Login" />
+            </div>
         </div>
     </div>
 </div>
