--- a/vcastplay-cms/src/app/pages/settings/users/users.component.html
+++ b/vcastplay-cms/src/app/pages/settings/users/users.component.html
@@ -10,57 +10,64 @@
                     <p-button (onClick)="onClickRefresh()" label="Refresh" variant="outlined" icon="pi pi-refresh"></p-button>
                 </div>
             </div>
-            <p-table 
-                class="hidden lg:block" 
-                [value]="userService.loadingSignal() ? utils.tableSkeletonRows : filteredUsers()" 
-                selectionMode="single"
-                [scrollable]="true" 
-                size="small"  
-                stripedRows
-            >
-                <ng-template #header>
-                    <tr>
-                        <th>Code</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Status</th>
-                        <th>Actions</th>
-                    </tr>
-                </ng-template>
-                <ng-template #body let-item>
-                    @if (userService.loadingSignal()) {
+            <div class="flex-1 md:h-full">
+                <p-table 
+                    class="hidden lg:block" 
+                    [value]="userService.loadingSignal() ? utils.tableSkeletonRows : filteredUsers()" 
+                    selectionMode="single"
+                    [scrollable]="true" 
+                    size="small"  
+                    stripedRows
+                >
+                    <ng-template #header>
                         <tr>
-                            <td><p-skeleton /></td>
-                            <td><p-skeleton /></td>
-                            <td><p-skeleton /></td>
-                            <td><p-skeleton /></td>
-                            <td><p-skeleton /></td>
+                            <th>Code</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Status</th>
+                            <th>Actions</th>
                         </tr>
-                    } @else {
+                    </ng-template>
+                    <ng-template #body let-item>
+                        @if (userService.loadingSignal()) {
+                            <tr>
+                                <td><p-skeleton /></td>
+                                <td><p-skeleton /></td>
+                                <td><p-skeleton /></td>
+                                <td><p-skeleton /></td>
+                                <td><p-skeleton /></td>
+                            </tr>
+                        } @else {
+                            <tr>
+                                <td>{{ item.code }}</td>
+                                <td>{{ item.firstName }} {{ item.lastName }}</td>
+                                <td>{{ item.email }}</td>
+                                <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
+                                <td class="flex flex-row">
+                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                                </td>
+                            </tr>
+                        }
+                    </ng-template>
+                    <ng-template #emptymessage>
                         <tr>
-                            <td>{{ item.code }}</td>
-                            <td>{{ item.firstName }} {{ item.lastName }}</td>
-                            <td>{{ item.email }}</td>
-                            <td><p-tag [value]="item.status" [severity]="utils.getStatus(item.status)" /></td>
-                            <td class="flex flex-row">
-                                <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                            <td colspan="5" [height]="20">
+                                <div class="flex justify-center p-5"><p>No users found</p></div>
                             </td>
                         </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+            <div class="block lg:hidden flex flex-col gap-4">
+                @if (!userService.loadingSignal()) {
+                    @for (item of filteredUsers(); track $index) {
+                        <app-user-list-item [user]="item" [actionBtn]="actionBtn" />
+                    } @empty {
+                        <div class="flex justify-center items-center p-5 h-100">
+                            <p>No roles found</p>
+                        </div>
                     }
-                </ng-template>
-            </p-table>
-            <div class="block lg:hidden grid grid-cols-1 gap-5">
-                @for (item of filteredUsers(); track $index) {
-                    <div class="flex flex-row gap-2 justify-between items-center p-[1rem] border border-gray-200 rounded-lg">
-                        <div class="flex flex-col">
-                            <h6 class="font-semibold">{{ item.firstName }} {{ item.lastName }}</h6>
-                            <p>{{ item.email }}</p>
-                        </div>
-                        <div class="flex flex-row">
-                            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                        </div>
-                    </div>
-                } @empty {
+                } @else {
                     @for (item of utils.tableSkeletonRows; track $index) {
                         <p-skeleton height="5rem" />
                     }
@@ -78,90 +85,12 @@
     <p-button (onClick)="onClickDelete(item, $event)" pTooltip="Delete" tooltipPosition="bottom" icon="pi pi-trash" [text]="true" [rounded]="true" severity="danger" />
 </ng-template>
 
-<p-dialog header="User Information" [(visible)]="showDialog" styleClass="w-[30rem] md:w-[50rem] h-auto" [modal]="true" [draggable]="false" [focusOnShow]="false">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8" [formGroup]="userForm">
-        <div class="col-span-2 md:col-span-1">
-            <p-floatlabel variant="in">
-                <input id="firstName" pInputText formControlName="firstName" 
-                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('firstName')?.invalid && formControl('firstName')?.touched }" fluid />
-                <label for="firstName">First Name</label>
-            </p-floatlabel>
-            @if (formControl('firstName')?.touched && (formControl('firstName')?.dirty || formControl('firstName')?.invalid)) {
-                @if (formControl('firstName')?.invalid) {
-                    <div class="p-2 text-sm text-red-500 flex items-center gap-2">
-                        <i class="pi pi-exclamation-circle"></i>
-                        @if (formControl('firstName')?.errors?.['required']) { This field is required }
-                    </div>
-                }
-            }
-        </div>
-        <div class="col-span-2 md:col-span-1">
-            <p-floatlabel variant="in">
-                <input id="lastName" pInputText formControlName="lastName" 
-                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('lastName')?.invalid && formControl('lastName')?.touched }" fluid />
-                <label for="lastName">Last Name</label>
-            </p-floatlabel>
-            @if (formControl('lastName')?.touched && (formControl('lastName')?.dirty || formControl('lastName')?.invalid)) {
-                @if (formControl('lastName')?.invalid) {
-                    <div class="p-2 text-sm text-red-500 flex items-center gap-2">
-                        <i class="pi pi-exclamation-circle"></i>
-                        @if (formControl('lastName')?.errors?.['required']) { This field is required }
-                    </div>
-                }
-            }
-        </div>
-        <div class="col-span-2">
-            <p-floatlabel variant="in" class="md:col-span-2">
-                <input id="email" pInputText formControlName="email" type="email" 
-                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('email')?.invalid && formControl('email')?.touched }" fluid />
-                <label for="email">Email</label>
-            </p-floatlabel>
-            @if (formControl('email')?.touched && (formControl('email')?.dirty || formControl('email')?.invalid)) {
-                @if (formControl('email')?.invalid) {
-                    <div class="p-2 text-sm text-red-500 flex items-center gap-2">
-                        <i class="pi pi-exclamation-circle"></i>
-                        @if (formControl('email')?.errors?.['required']) { This field is required }
-                        @if (formControl('email')?.errors?.['email']) { Invalid email }
-                    </div>
-                }
-            }
-        </div>
-        <div class="col-span-2 md:col-span-1">
-            <p-floatlabel variant="in">
-                <p-inputnumber inputId="integeronly" formControlName="mobile" 
-                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('mobile')?.invalid && formControl('mobile')?.touched }" fluid />
-                <!-- <p-inputmask mask="999-999-9999" formControlName="mobile" styleClass="w-full" /> -->
-                <label for="mobile">Mobile Number</label>
-            </p-floatlabel>
-            @if (formControl('mobile')?.touched && (formControl('mobile')?.dirty || formControl('mobile')?.invalid)) {
-                @if (formControl('mobile')?.invalid) {
-                    <div class="p-2 text-sm text-red-500 flex items-center gap-2">
-                        <i class="pi pi-exclamation-circle"></i>
-                        @if (formControl('mobile')?.errors?.['required']) { This field is required }
-                    </div>
-                }
-            }
-        </div>
-        <div class="col-span-2 md:col-span-1">
-            <p-floatlabel variant="in">
-                <p-select formControlName="role" inputId="role" [options]="roleService.roles()" appendTo="body" optionLabel="name" optionValue="id" 
-                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('role')?.invalid && formControl('role')?.touched }" fluid />
-                <label for="role">Roles</label>
-            </p-floatlabel>
-            @if (formControl('role')?.touched && (formControl('role')?.dirty || formControl('role')?.invalid)) {
-                @if (formControl('role')?.invalid) {
-                    <div class="p-2 text-sm text-red-500 flex items-center gap-2">
-                        <i class="pi pi-exclamation-circle"></i>
-                        @if (formControl('role')?.errors?.['required']) { This field is required }
-                    </div>
-                }
-            }
-        </div>
-    </div>
-    <div class="flex justify-end gap-2">
+<p-dialog header="User Information" [(visible)]="userService.showDialog" styleClass="w-[30rem] md:w-[50rem] h-auto" [modal]="true" [draggable]="false" [focusOnShow]="false">
+    <app-user-details [userForm]="userForm" />
+    <ng-template #footer>
         <p-button label="Cancel" severity="secondary" (onClick)="onClickCancel()" />
         <p-button label="Save" (onClick)="onClickSave($event)" />
-    </div>
+    </ng-template>
 </p-dialog>
 
 <p-toast />
