--- a/vcastplay-cms/src/app/pages/screens/screen-list/screen-list.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-list/screen-list.component.html
@@ -66,6 +66,21 @@
                         </tr>
                     </ng-template>
                 </p-table>
+                <div class="block lg:hidden flex flex-col gap-4">
+                    @if (!screenService.loadingSignal()) {
+                        @for (item of filteredScreen(); track $index) {
+                            <app-screen-list-item [screen]="item" [actionBtn]="actionBtn" />
+                        } @empty {
+                            <div class="flex justify-center items-center p-5 h-100">
+                                <p>No screend found</p>
+                            </div>
+                        }
+                    } @else {
+                        @for (item of utils.tableSkeletonRows; track $index) {
+                            <p-skeleton height="5rem" />
+                        }
+                    }
+                </div>
             </div>
             <ng-template #footer>
                 <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
