--- a/vcastplay-cms/src/app/components/dashboard/screen-lists/screen-lists.component.html
+++ b/vcastplay-cms/src/app/components/dashboard/screen-lists/screen-lists.component.html
@@ -14,7 +14,7 @@
             <div class="flex justify-between items-center border-b-1 p-2 border-gray-200">
                 <div class="flex flex-col gap-1">
                     <div class="font-semibold">{{ item.name }}</div>
-                    <p class="text-sm italic">{{ item.resolution }}</p>
+                    <p class="text-sm italic">{{ item.displaySettings.resolution }}</p>
                 </div>
                 <p-tag [value]="item.status.toUpperCase()" [severity]="utils.getStatus(item.status)" />
             </div>
