--- a/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
+++ b/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
@@ -28,7 +28,7 @@
                 <div class="flex flex-col gap-4 p-3">
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">Resolution</div>
-                        <p class="text-sm italic">{{ selectedScreen()?.resolution }}</p>
+                        <p class="text-sm italic">{{ selectedScreen()?.displaySettings?.resolution }}</p>
                     </div>
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">Layout</div>
@@ -53,7 +53,7 @@
                                 <div class="flex justify-between items-center border-b-1 p-2 border-gray-200 hover:bg-gray-100" (click)="onClickScreen(item)">
                                     <div class="flex flex-col gap-1">
                                         <div class="font-semibold">{{ item.name }}</div>
-                                        <p class="text-sm italic">{{ item.resolution }}</p>
+                                        <p class="text-sm italic">{{ item.displaySettings.resolution }}</p>
                                     </div>
                                     <p-tag [value]="item.status.toUpperCase()" [severity]="utils.getStatus(item.status)" />
                                 </div>
@@ -77,7 +77,7 @@
                 <div class="flex flex-col gap-4 p-3">
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">Resolution</div>
-                        <p class="text-sm italic">{{ selectedScreen()?.resolution }}</p>
+                        <p class="text-sm italic">{{ selectedScreen()?.displaySettings?.resolution }}</p>
                     </div>
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">Layout</div>
