updated screen map dashboard

--- a/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col-span-1">
                         <p-floatlabel variant="in">
-                            <p-datepicker id="hours" formControlName="hours" timeOnly fluid />
+                            <p-datepicker id="hours" formControlName="hours" icon="pi pi-clock" showIcon showButtonBar timeOnly fluid />
                             <label for="hours">Hours</label>
                         </p-floatlabel>
                     </div>
