--- a/vcastplay-cms/src/app/components/mapmarkers/mapmarkers.component.html
+++ b/vcastplay-cms/src/app/components/mapmarkers/mapmarkers.component.html
@@ -2,5 +2,5 @@
     <div class="absolute top-0 right-0 z-50 p-5">
         <p-button (onClick)="initializedMap()" pTooltip="Refresh" tooltipPosition="bottom" icon="pi pi-refresh" />
     </div>
-    <div id="screenMap" class="rounded-lg z-5 relative" #screenMap></div>
+    <div id="mapMarkers" class="rounded-lg z-5 relative" #mapMarkers></div>
 </div>
