--- a/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
@@ -43,7 +43,9 @@
                     </p-floatlabel>
                 </div>
                 <div class="col-span-1 md:col-span-12" formGroupName="displaySettings">
-                    <p-divider [align]="'left'" type="solid"><b class="text-sm">Display Settings</b></p-divider>
+                    <p-divider [align]="'left'" type="solid">
+                        <b class="text-sm">Display Settings <span class="italic font-normal text-red-500">(Auto Detect)</span></b>
+                    </p-divider>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-3">
                         <div class="col-span-1">
                             <p-floatlabel variant="in">
